lib/core/native/tacit_llama_bindings.g.dart

// GENERATED FILE - DO NOT EDIT.
// ignore_for_file: type=lint, unused_import, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Dart FFI bindings for the tacit_llama C-API (llama.cpp bridge).
class TacitLlamaBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TacitLlamaBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TacitLlamaBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Embedding dimension (n_embd) of the loaded model — e.g. 384 for
  /// multilingual-e5-small. Returns -1 on error (query tacit_last_error).
  int tacit_embedding_dim(ffi.Pointer<tacit_model> model) {
    return _tacit_embedding_dim(model);
  }

  late final _tacit_embedding_dimPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<tacit_model>)>>(
        'tacit_embedding_dim',
      );
  late final _tacit_embedding_dim = _tacit_embedding_dimPtr
      .asFunction<int Function(ffi.Pointer<tacit_model>)>();

  /// Evaluates a prompt into the model context (KV cache) without generating
  /// new tokens. callback fires once per prompt token with its text piece and
  /// may return non-zero to abort early. Returns 0 on success, -1 on error.
  int tacit_eval_prompt(
    ffi.Pointer<tacit_model> model,
    ffi.Pointer<ffi.Char> prompt,
    TokenCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _tacit_eval_prompt(model, prompt, callback, user_data);
  }

  late final _tacit_eval_promptPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<tacit_model>,
            ffi.Pointer<ffi.Char>,
            TokenCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('tacit_eval_prompt');
  late final _tacit_eval_prompt = _tacit_eval_promptPtr
      .asFunction<
        int Function(
          ffi.Pointer<tacit_model>,
          ffi.Pointer<ffi.Char>,
          TokenCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Releases any state allocated by tacit_init_backend.
  void tacit_free_backend() {
    return _tacit_free_backend();
  }

  late final _tacit_free_backendPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('tacit_free_backend');
  late final _tacit_free_backend = _tacit_free_backendPtr
      .asFunction<void Function()>();

  /// Frees a string returned by tacit_generate. NULL is fine.
  void tacit_free_string(ffi.Pointer<ffi.Char> s) {
    return _tacit_free_string(s);
  }

  late final _tacit_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'tacit_free_string',
      );
  late final _tacit_free_string = _tacit_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Runs one synchronous completion.
  /// prompt: UTF-8 text.
  /// max_tokens: maximum number of tokens to generate.
  /// temperature: 0.0f = greedy; > 0.0f = sampling.
  /// Returns a malloc-allocated UTF-8 string (free with tacit_free_string),
  /// or NULL on failure (query tacit_last_error).
  ffi.Pointer<ffi.Char> tacit_generate(
    ffi.Pointer<tacit_model> model,
    ffi.Pointer<ffi.Char> prompt,
    int max_tokens,
    double temperature,
  ) {
    return _tacit_generate(model, prompt, max_tokens, temperature);
  }

  late final _tacit_generatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<tacit_model>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Float,
          )
        >
      >('tacit_generate');
  late final _tacit_generate = _tacit_generatePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<tacit_model>,
          ffi.Pointer<ffi.Char>,
          int,
          double,
        )
      >();

  /// Streaming completion.
  /// piece is delivered through cb.
  /// Returns 0 on success, non-zero on failure/abort.
  int tacit_generate_stream(
    ffi.Pointer<tacit_model> model,
    ffi.Pointer<ffi.Char> prompt,
    int max_tokens,
    double temperature,
    tacit_piece_cb cb,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _tacit_generate_stream(
      model,
      prompt,
      max_tokens,
      temperature,
      cb,
      user_data,
    );
  }

  late final _tacit_generate_streamPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<tacit_model>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Float,
            tacit_piece_cb,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('tacit_generate_stream');
  late final _tacit_generate_stream = _tacit_generate_streamPtr
      .asFunction<
        int Function(
          ffi.Pointer<tacit_model>,
          ffi.Pointer<ffi.Char>,
          int,
          double,
          tacit_piece_cb,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Computes one embedding for UTF-8 `text` using llama.cpp embedding mode
  /// (context created by tacit_init_context / tacit_model_load; pooling type
  /// comes from the GGUF metadata, e.g. bert.pooling_type = MEAN for
  /// multilingual-e5-small.gguf — when the model has no pooling metadata the
  /// tokens are mean-pooled manually as a fallback).
  ///
  /// Buffer contract (no malloc churn — the caller owns `out`):
  /// - `out == NULL` or `out_cap <= 0`  -> size query: nothing is written and
  /// the model's embedding dimension is returned (same value as
  /// tacit_embedding_dim) so the caller can allocate exactly once.
  /// - `out_cap < dim`                  -> -1, set_error("buffer too small").
  /// - otherwise the `dim` floats are written into `out` and `dim` is
  /// returned (dim == 0 is therefore impossible on success).
  /// Returns -1 on any failure (query tacit_last_error).
  ///
  /// The vector is NOT normalized here — normalization happens in Dart inside
  /// getEmbedding() so every caller gets L2-normalized output for cosine
  /// similarity. Text longer than the model's 512-token training window is
  /// truncated (documented ceiling; chunk-and-average is the upgrade path).
  ///
  /// Thread-safety: serialized per handle with the same mutex as
  /// tacit_generate; safe to call from a thread while another thread generates
  /// with a DIFFERENT handle (separate llama_context).
  int tacit_get_embedding(
    ffi.Pointer<tacit_model> model,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Float> out,
    int out_cap,
  ) {
    return _tacit_get_embedding(model, text, out, out_cap);
  }

  late final _tacit_get_embeddingPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<tacit_model>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Float>,
            ffi.Int,
          )
        >
      >('tacit_get_embedding');
  late final _tacit_get_embedding = _tacit_get_embeddingPtr
      .asFunction<
        int Function(
          ffi.Pointer<tacit_model>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Float>,
          int,
        )
      >();

  /// Initializes the llama.cpp backend. Idempotent: the mutex-guarded
  /// once-per-process flag makes repeat calls a no-op, whichever entry point
  /// (this function or tacit_init_context) runs first.
  /// Kept public for manual/advanced init; tacit_init_context() covers it in
  /// the one-shot flow. llama_backend_free must be called before process exit.
  bool tacit_init_backend() {
    return _tacit_init_backend();
  }

  late final _tacit_init_backendPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('tacit_init_backend');
  late final _tacit_init_backend = _tacit_init_backendPtr
      .asFunction<bool Function()>();

  /// One-shot initialization: llama.cpp backend + GGUF model + inference context,
  /// all in a single call. Returns a handle usable by tacit_generate /
  /// tacit_generate_stream, or NULL on failure (query tacit_last_error).
  ffi.Pointer<tacit_model> tacit_init_context(
    ffi.Pointer<ffi.Char> model_path,
  ) {
    return _tacit_init_context(model_path);
  }

  late final _tacit_init_contextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<tacit_model> Function(ffi.Pointer<ffi.Char>)
        >
      >('tacit_init_context');
  late final _tacit_init_context = _tacit_init_contextPtr
      .asFunction<ffi.Pointer<tacit_model> Function(ffi.Pointer<ffi.Char>)>();

  /// Returns a null-terminated description, NULL if there was no error.
  ffi.Pointer<ffi.Char> tacit_last_error() {
    return _tacit_last_error();
  }

  late final _tacit_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'tacit_last_error',
      );
  late final _tacit_last_error = _tacit_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Unloads the model and frees its context.
  void tacit_model_free(ffi.Pointer<tacit_model> model) {
    return _tacit_model_free(model);
  }

  late final _tacit_model_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<tacit_model>)>>(
        'tacit_model_free',
      );
  late final _tacit_model_free = _tacit_model_freePtr
      .asFunction<void Function(ffi.Pointer<tacit_model>)>();

  /// Loads a GGUF model from a filesystem path.
  /// Part of the split init sequence; tacit_init_context() calls this
  /// internally, so callers normally don't need it directly.
  /// Returns a handle, or NULL on failure.
  ffi.Pointer<tacit_model> tacit_model_load(ffi.Pointer<ffi.Char> model_path) {
    return _tacit_model_load(model_path);
  }

  late final _tacit_model_loadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<tacit_model> Function(ffi.Pointer<ffi.Char>)
        >
      >('tacit_model_load');
  late final _tacit_model_load = _tacit_model_loadPtr
      .asFunction<ffi.Pointer<tacit_model> Function(ffi.Pointer<ffi.Char>)>();

  /// Clears the KV cache and wipes the cache buffers.
  /// Used by the Dart worker after every generation (the app re-prompts full
  /// history each turn, so stale KV only wastes memory while idle).
  /// Returns 0 on success, -1 on failure.
  int tacit_reset(ffi.Pointer<tacit_model> model) {
    return _tacit_reset(model);
  }

  late final _tacit_resetPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<tacit_model>)>>(
        'tacit_reset',
      );
  late final _tacit_reset = _tacit_resetPtr
      .asFunction<int Function(ffi.Pointer<tacit_model>)>();
}

/// Piece callback for tacit_eval_prompt and tacit_generate_stream.
/// Called once per token piece with a null-terminated UTF-8 string.
/// Return non-zero to abort early.
/// Guarantee: pieces always contain valid UTF-8 (llama_token_to_piece
/// returns UTF-8 bytes per the llama.cpp API contract).
typedef TokenCallback = ffi.Pointer<ffi.NativeFunction<TokenCallbackFunction>>;
typedef TokenCallbackFunction = ffi.Int Function(
  ffi.Pointer<ffi.Char> piece,
  ffi.Pointer<ffi.Void> user_data,
);
typedef DartTokenCallbackFunction = int Function(
  ffi.Pointer<ffi.Char> piece,
  ffi.Pointer<ffi.Void> user_data,
);

final class tacit_model extends ffi.Opaque {}

/// Legacy alias kept so tacit_generate_stream callers keep compiling.
typedef tacit_piece_cb = TokenCallback;
